# dda

./: .gitignore
zad1cz3/: CMakeLists.txt  co3.txt  do.bat  main.cpp  ploterror.gp
zad1cz3/classes/: layer.cpp  layer.hpp  neuron.cpp  neuron.hpp
zad2cz1/: plot.gp  ploterror.gp  readme.txt
zad2cz1/res/: set1  set2
zad2cz1/res/gif/: nens_0
zad2cz1/res/scripts/: load_pic.gp  make gif script.gp
zad2cz1/src/: Drawer.java  Layer.java  Main.java  Neuron.java  Point.java  Sorter.java
zad3w1cz1/: e.txt  plot constraints.gp  plot function.gp  plot ga_func.gp  zad3w1.sln
zad3w1cz1/zad3w1/: Creature.cs  Population.cs  Program.cs  zad3w1.csproj
zad3w1cz1/zad3w1/Properties/: AssemblyInfo.cs
